fixing overflow on media content

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -6,6 +6,8 @@ $section-padding: 1rem 1.5rem
 @import 'bulma/bulma.sass'
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss'
 
+.media-content
+    overflow-x: visible
 
 .cover-image-box-back
     background-color: $white
